nginx-clifford/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-webapp-clifford
  namespace: test

  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx-test-webapp-clifford
    app.kubernetes.io/part-of: ce-grp-1
    app.kubernetes.io/managed-by: argocd
    environment: test

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
